@@ -128,6 +128,28 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 #pragma mark -
+#pragma mark Executement
+
+
+///////////////////////////////////////////////////////////////////////////////////////////////////
+- (BOOL)executeStatement {
+  BOOL result = YES;
+
+  @synchronized(_db) {
+    if (result) {
+      int code = sqlite3_exec(_db.sqliteDB, _sql, nil, nil, nil);
+
+      result = code == SQLITE_DONE || code == SQLITE_ROW || code == SQLITE_OK;
+    }
+  }
+
+  return result;
+}
+
+
+///////////////////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////////////
+#pragma mark -
 #pragma mark Stepping
 
 
@@ -198,7 +220,7 @@
 
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
-- (BOOL)executeStatement {
+- (BOOL)stepAndResetStatement {
   BOOL succeeded;
   @synchronized(_db) {
     succeeded = [self step];
